# agent-sdr

./: README.md  pyproject.toml
src/agentsdr/: crew.py  main.py
src/agentsdr/config/: agents.yaml  tasks.yaml
