[project]
name = "agentsdr"
version = "0.1.0"
description = "AgentSDR using crewAI"
authors = [{ name = "Your Name", email = "fernandocpdoba@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
agentsdr = "agentsdr.main:run"
run_crew = "agentsdr.main:run"
train = "agentsdr.main:train"
replay = "agentsdr.main:replay"
test = "agentsdr.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
